# LiteS

./: .gitattributes  .gitignore  CMakeLists.txt  Install.bat  README.md  camera_log  gt.ply  gt_after_sampling.ply  gt_airspace.ply  gt_init.trj  gt_mesh.ply  gt_opti.trj  gt_point.ply  gt_proxy.ply  mesh_proxy.ply  point_before_sampling.ply  point_proxy.ply  proxy_airspace.ply  proxy_mesh.ply  proxy_point.ply
LiteS/: CMakeLists.txt
LiteS-CUDA/: CCBVHAccel.cuh  CCDataStructure.cu  CCDataStructure.h  CCPrimitive.cuh  CCVectorArray.cuh  CMakeLists.txt
LiteS-Engine/: CMakeLists.txt  CMesh.cu
LiteS-Engine/resources/: imgui_impl_glfw.h
LiteS-Engine/resources/shaders/: MeshFrag.glsl  MeshVert.glsl  NormalFrag.glsl  NormalGeom.glsl  NormalVert.glsl  PointCloudFrag.glsl  PointCloudGeom.glsl  PointCloudVert.glsl
LiteS-Engine/src/: CBVHACCEL.h  CCArray.h  CCamera.h  CComponent.cpp  CComponent.h  CDifferPass.cpp  CEngine.cpp  CEngine.cpp~RF1a1d85c6.TMP  CEngine.h  CImage.h  CKDACCEL.h  CMesh.cpp  CMesh.cu  CMesh.h  CModel.cpp  CModel.h  CPass.cpp  CPass.h  CPointCloudComponent.cpp  CPointCloudComponent.h  CPointCloudMesh.cpp  CPointCloudMesh.h  CSIFT.h  CScene.cpp  CScene.h  CShader.h  CTestComponent.cpp  CTestComponent.h  CTriMesh.cpp  CTriMesh.h  config.h.in  config.xml  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  trajectory_util.h  util.cpp  util.h
LiteS-Test/: CMakeLists.txt  main.cpp
LiteS-TestCase/: CMakeLists.txt
LiteS-TestCase/P/: CMakeLists.txt
LiteS-TestCase/P/GenerateNadir/: CGenerateNadirComponent.cpp  CGenerateNadirComponent.h  CMakeLists.txt  config.json  main.cpp
LiteS-TestCase/T-ASSAO/: CMakeLists.txt
LiteS-TestCase/T-ASSAO/src/: CSSAOComponent.cpp  config.xml
LiteS-TestCase/T-ASSAO/src/shaders/: SSAOFrag.glsl  deinterleaveFrag.glsl  geometryVert.glsl  shadingFrag.glsl  upsampleFrag.glsl
LiteS-TestCase/T-BVHDisplay/: CBVHDisplay.cpp  CBVHDisplay.h  CMakeLists.txt  config.json  config.xml  main.cpp
LiteS-TestCase/T-CUDABase/: CMakeLists.txt  cuda_util.cu  cuda_util.h  main.cpp
LiteS-TestCase/T-CalculateAverageDistance/: CCalculateAverageDistanceComponent.cpp  CCalculateAverageDistanceComponent.h  CMakeLists.txt  config.json  main.cpp
LiteS-TestCase/T-EvaluatePointCloud/: CEvaluatePointCloud.cpp  CEvaluatePointCloud.h  CMakeLists.txt  config.json  main.cpp
LiteS-TestCase/T-FeatureDetectSIFT/: CMakeLists.txt  main.cpp
LiteS-TestCase/T-PathGenerate/: CMakeLists.txt  CPathGenarateComponent.cpp  CPathGenarateComponent.cu  CPathGenarateComponent.h  config.json  config.xml  kernel.cu  kernel.h  main.cpp  optimize.cu  optimize.h
LiteS-TestCase/T-PathPlaning/: CMakeLists.txt  CPathComponent.cpp  CPathComponent.h  config.xml  main.cpp
LiteS-TestCase/T-PointCloud/: CMakeLists.txt  CTexComponent.cpp  CTexComponent.h  config.xml  main.cpp
LiteS-TestCase/T-ProxyGenerate/: CMakeLists.txt  CPathComponent.cpp  CPathComponent.h  config.json  config.xml  main.cpp
LiteS-TestCase/T-ProxyGenerate - 副本/: CMakeLists.txt  main.cpp
LiteS-TestCase/T-RemovePointInside/: CMakeLists.txt  CRemovePointInsideComponent.cpp  CRemovePointInsideComponent.h  config.json  main.cpp
LiteS-TestCase/T-SFM/: CMakeLists.txt  foundamental.h  main.cpp  unitTest.h
LiteS-TestCase/T-SSAO-Base/: CMakeLists.txt
LiteS-TestCase/T-SSAO-Base/src/: CSSAOComponent.cpp  CSSAOComponent.h  config.xml
LiteS-TestCase/T-SSAO-Base/src/shaders/: SSAOFrag.glsl  geometryFrag.glsl  shadingFrag.glsl
LiteS-TestCase/T-SSAO-Robust/: CMakeLists.txt
LiteS-TestCase/T-SSAO-Robust/src/: CSSAOComponent.cpp  CSSAOComponent.h  config.xml  main.cpp
LiteS-TestCase/T-SSAO-Robust/src/shaders/: blurFrag.glsl  downsampleFrag.glsl  downsampleVert.glsl  geometryFrag.glsl  showSSAOFrag.glsl
LiteS-TestCase/T-Textured-Objects-Load/: CMakeLists.txt
LiteS-TestCase/T-Textured-Objects-Load/src/: CTexComponent.cpp  CTexComponent.h  config.xml  main.cpp
LiteS-TestCase/T-Textured-Objects-Load/src/shaders/: testFrag.glsl
LiteS-TestCase/T-VisualizeAnimation/: CMakeLists.txt  CVisualizeAnimationComponent.cpp  CVisualizeAnimationComponent.h  config.json  main.cpp
LiteS-TestCase/T-VisualizeCameras/: CMakeLists.txt  CVisualizeCamerasComponent.cpp  CVisualizeCamerasComponent.h  config.json  main.cpp
LiteS/resources/shaders/: NormalFrag.glsl  PointCloudVert.glsl
LiteS/src/: CBVHACCEL.h  CCamera.h  CComponent.cpp  CComponent.h  CDifferPass.h  CEngine.cpp  CEngine.h  CKDACCEL.h  CMesh.cpp  CMesh.h  CMesh_backup.h  CModel.cpp  CModel.h  CModelIO.h  CPass.cpp  CPass.h  CPointCloudComponent.cpp  CPointCloudMesh.cpp  CPointCloudMesh.h  CShader.h  CTestComponent.cpp  CTriMesh.cpp  CTriMesh.h  main.cpp  util.h
my_test/: 1.ply  aoxing_point.ply  asia_ny.csv  jianzhu1.ply  jianzhu1_mesh.ply  jianzhu1_my_point.ply  path_calculate.py  point_after_sampling.ply  point_before_sampling.ply  proxy_mesh.ply  proxy_point.ply  sfm.ply  test_input.ply  test_spline.csv
ny1-test/: oblique-opti-ny.utj  point_after_sampling.ply
ny1_test/: camera.csv  path_calculate.py
