# FILE(GLOB subdirs *)

# FOREACH(child ${subdirs})
#     IF(IS_DIRECTORY ${child})
#         STRING(REGEX MATCH T-.*$ project  ${child})
#         ADD_SUBDIRECTORY(${project})
#     ENDIF()
# ENDFOREACH()

ADD_SUBDIRECTORY(T-PointCloud)
ADD_SUBDIRECTORY(T-ProxyGenerate)
#ADD_SUBDIRECTORY(T-PathGenerate)
ADD_SUBDIRECTORY(T-BVHDisplay)
ADD_SUBDIRECTORY(T-FeatureDetectSIFT)
ADD_SUBDIRECTORY(T-SFM)
ADD_SUBDIRECTORY(T-RemovePointInside)
#ADD_SUBDIRECTORY(T-CUDABase)
ADD_SUBDIRECTORY(T-VisualizeCameras)
ADD_SUBDIRECTORY(P)
